mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Aug 25 2011] - Rumble
  Comment fixes, clarification, and warning cleanup. (thanks Kyle)
[Sep 11 2011] - Fizban
  Added MXP, MSP, MSSP, MSDP, ATCP, CHARSET, NAWS, TTYPE, 256-color protocols. (Thanks KaVir)
[Aug 18 2011] - Fizban
  Added hitroll and damroll fields to DG Scripts. Also made them editable via scripts.
  Made do_stat_character show scripts attached to players.
[Mar 31 2011] - Rumble
  Fixed several typos and formatting issues. (Thanks Kyle)
  Added check to prevent immortals from getting poisoned.
  Fixed crash bug on advance.
  Added output to helpcheck command instead of an empty return.
  Fixed do_levels max/min level confusion.
  Fixed do_score which was showing gold as exp. (Thanks Rhade)
  Added free_olc_ibt.
  Added CONFIG_IBT_AUTOSAVE.
  Fixed bug when casting invis on objects.
  Added mudmail.pdf instructions to /doc.
[Dec 16 2010] - Jamdog
  Bug-Fix: Fixed illegal mob flag bug where medit set wrong flag
[Dec 10 2010] - Jamdog
  Minor bug fixes, added MAIL flag names and fixed compile warnings
  Bug Fix: Alignment in medit now saves when it's the only thing edited (thanks cosine_omerta)
  Added ZONE_WORLDMAP flag to set a whole zone to worldmap style maps
[Dec 08 2010] - Jamdog
  Added olist <name>
  page_string now uses player's screen width and correctly parses ANSI color codes
[Dec 07 2010] - Jamdog
  Fixed erroneous SYSERR report and incorrect contant in new house system (thanks Vatiken)
  Buildwalk now allows builder to specify default sector type (thanks Mirad)
  Added happyhour script variables (thanks Kam)
  Added affects list and type list to olist command